@@ -66,7 +66,7 @@
          "web" : "https://github.com/worthmine/Data-UUID-Base64URLSafe"
       }
    },
-   "version" : "0.01",
+   "version" : "0.35",
    "x_authority" : "cpan:WORTHMINE",
    "x_contributors" : [
       "Jesse Vincent <jesse@bestpractical.com>",
